<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">ValpoHistorico</string>
    <string name="app_id" translatable="false">552963598113169</string>
    <string name="action_settings" translatable="false">Preferencias</string>
    <string name="title_section1" translatable="false">Mapa</string>
    <string name="title_section2" translatable="false">Información</string>
    <string name="title_section3" translatable="false">Recomendado</string>
    <string name="default_img_desc" translatable="false">Imagen</string>
    <string name="next_here_text" translatable="false">Lugares importantes cerca de aquí</string>
    <string name="default_info_title" translatable="false">Lugar histórico importante</string>
    <string name="extra_title_text" translatable="false">Resumen</string>
    <string name="recommend_subtitle" translatable="false">Otros </string>
    <string name="reload" translatable="false">+ Vistos</string>
    <string name="hipster_mode" translatable="false">Modo hipster</string>
    <string name="share" translatable="false">Compartir </string>
    <string name="facebook" translatable="false">Compartir en Facebook</string>
    <string name="twitter" translatable="false">Compartir en Twitter</string>
    <string name="related_title_text" translatable="false">Relacionados</string>
    <string name="big_img_text" translatable="false">Imagen en alta resolución</string>
</resources>
