<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".InfoFragment" >

        <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/default_info_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/share_facebook"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginLeft="40px"
            android:layout_marginRight="20px"
            android:layout_weight="0.5"
            android:background="@drawable/facebook_shape"
            android:drawableLeft="@drawable/fb_logo"
            android:onClick="shareOnFacebook"
            android:paddingBottom="10px"
            android:paddingLeft="30px"
            android:paddingTop="10px"
            android:text="@string/facebook"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/share_twitter"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginLeft="20px"
            android:layout_marginRight="40px"
            android:layout_weight="0.5"
            android:background="@drawable/twitter_shape"
            android:drawableLeft="@drawable/tw_logo"
            android:onClick="shareOnTwitter"
            android:paddingBottom="10px"
            android:paddingLeft="30px"
            android:paddingTop="10px"
            android:text="@string/twitter"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/info_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_img_desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/info_next_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/next_here_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/info_extra_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >
        </LinearLayout>

        <TextView
            android:id="@+id/info_extra_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/extra_title_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TableLayout
            android:id="@+id/info_next_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
        </TableLayout>

        <TextView
            android:id="@+id/info_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>